# gxradar_pi

./: CMakeLists.txt  GRadarDialog.fbp  README  README.md
po/: POTFILES.in  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fr.po  fr_FR.po  gl.po  gl_ES.po  gxradar_pi.pot  hu.po  hu_HU.po  it.po  it_IT.po  ja_JP.po  nb.po  nb_NO.po  nl.po  nl_NL.po  pl.po  pl_PL.po  pt.po  pt_BR.po  pt_PT.po  ru.po  ru_RU.po  sv.po  sv_SE.po  (+6 more)
src/: GxRadarUI.cpp  GxRadarUI.h  Thumbs.db  gxradar_pi.cpp  gxradar_pi.h  gxradardialog.cpp  gxradardialog.h
